# amino-acids

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml  rustfmt.toml
.github/workflows/: rust.yml
aa-colour/: CHANGELOG.md  Cargo.toml  README.md  release.toml
aa-colour/src/: error.rs
aa-colours/: CHANGELOG.md  Cargo.toml  README.md
aa-colours/src/: palettes.rs
aa-name/: CHANGELOG.md  Cargo.toml  README.md  release.toml
aa-name/src/: lib.rs
aa-names/: CHANGELOG.md  Cargo.toml  README.md
aa-names/src/: lib.rs
aa-regex/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
aa-regex/tests/: any.rs  any_of.rs  except.rs  fails.rs
aa-regex/tests/fails/: any_X.rs  any_of_X.rs  any_of_X.stderr  any_of_additional_comma.rs  any_of_empty.rs  any_of_empty.stderr  except_all.rs  except_all.stderr  except_empty.stderr
aa-similarity/: CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
aa-similarity/src/: lib.rs
src/: aa.rs  alignment.rs  colors.rs  errors.rs  lib.rs  palettes.rs
tests/: any.rs  any_of.rs  except.rs  except2.rs
tests/fails/: any_X.stderr  any_additional_comma.rs  any_additional_comma.stderr  any_not_empty.rs  any_not_empty.stderr  any_of_X.stderr  any_of_additional_comma.stderr  any_of_empty.stderr  except_all.rs  except_all.stderr  except_empty.rs  except_empty.stderr
