[package]
name = "aa-colour"
version = "0.1.0"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
categories = ["science"]
license = "Apache-2.0"
exclude = [".github/*"]

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# once_cell = "1.4"
thiserror = "1.0"
displaydoc = "0.1"

[features]
default = ["clustal"]
clustal = []
