[package]
name = "aa-colour"
description = """
Add some colours to your amino acids.
"""
version = "0.1.4"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
categories = ["science"]
keywords = ["term", "color", "bioinformatics"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jeanmanguy/amino-acids"
homepage = "https://github.com/jeanmanguy/amino-acids"
publish = true


[lib]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
displaydoc = "0.1"
