[package]
name = "aa-colour"
description = """
Add some colours to your amino acids.
"""
version = "0.1.2"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
categories = ["science"]
keywords = ["term", "color", "bioinformatics"]
license = "MIT/Apache-2.0"
exclude = [".github/*"]
repository = "https://github.com/jeanmanguy/aa-colour"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
displaydoc = "0.1"
