[package]
name = "aa-name"
version = "0.1.4-alpha.1"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
description = """
Basic enum and structs to display amino acid names.
"""
readme = "README.md"
repository = "https://github.com/jeanmanguy/amino-acids"
homepage = "https://github.com/jeanmanguy/amino-acids"
keywords = ["bioinformatics"]
categories = ["science"]
license = "MIT/Apache-2.0"
publish = true


[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
