[package]
name = "aa-regex"
version = "0.3.4"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
description = """
Utility macros to build regular expression matching protein sequences.
"""
readme = "README.md"
repository = "https://github.com/jeanmanguy/amino-acids"
homepage = "https://github.com/jeanmanguy/amino-acids"
keywords = ["regex", "bioinformatics", "macro"]
categories = ["science"]
license = "MIT/Apache-2.0"
publish = true


[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
regex = "1.4"
trybuild = "1.0"
